Updated HTML Version

--- a/launch_checklist.html
+++ b/launch_checklist.html
@@ -127,11 +127,8 @@ pre code {
 
 </head>
 <body>
-<p><img src="http://f.cl.ly/items/1F0y2N1W3V1M1v2m2k1C/wdtuts-logo.png" alt="image" /></p>
-
 <h1>Website Launch Checklist</h1>
-
-<p>At <a href="http://www.fhoke.com">FHOKE</a> we’ve been through it all, from perfect launches to ones that have turned into complete nightmares! Through our experiences we’ve compiled a list, in no particular order, of a process we go through before we launch our sites.</p>
+<p>Created by <a href="https://github.com/TheLast22" style="text-decoration: none; color: black;"><b>Christian Stewart</b></a></p>
 
 <p>This won’t cover everything, but should give you a quick overview of what you could be doing or adding to your own checklist.</p>
 
@@ -337,6 +334,6 @@ pre code {
 
 <hr />
 
-<p>Let us know your launch checklist recommendations <a href="http://enva.to/XpDQqR">on Webdesigntuts+</a></p>
+<p>Let us know your launch checklist recommendations <a href="https://github.com/TheLast22">on my github page</a></p>
 </body>
 </html>
